[package]
name = "default-vec"
description = "A specialized vector that has a default value."
documentation = "https://docs.rs/default-vec/"
repository = "https://github.com/andrewhickman/default-vec"
license = "MIT/Apache-2.0"
version = "0.1.1"
keywords = ["data-structures"]
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]